# NeuronDoc

./: .env.example  .gitignore  Makefile  Readme.md  commit_names.md  docker-compose.yml
.github/workflows/: lint_backend.yml  test_backend.yml
backend/: .pylintrc  Dockerfile  alembic.ini  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 409fae353e7d_.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  base.py  code.py  file.py  user.py
backend/app/utils/: __init__.py  logging.py
backend/backend_scripts/: entrypoint.sh  test_entrypoint.sh
backend/tests/: conftest.py  test_main.py
backend/tests/test_app/test_core/: test_config.py
bash_scripts/: clean_files_and_dirs.sh  create_or_update_env.sh
