[tool.poetry]
name = "backend-neurondoc"
version = "0.1.0"
description = "Backend for application on FastAPI"
authors = ["Danila Golubev <danila25golubev@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
black = "^25.11.0"
pylint = "^4.0.3"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
